modifs de clean + suppression de l'interface Dropable qui n'etait pas utilisée + implémentation de la nouvelle version de Prompt